2008-12-31 Mark Grondona <mgrondona@llnl.gov>

	* src/lib/edac.h :
	  Increase EDAC_MAX_CHANNELS from 2 to 6.

2008-12-18 Mark Grondona <mgrondona@llnl.gov>

	* src/etc/Makefile.am, src/etc/Makefile.in :
	  Allow edac-utils to be correctly built and installed
	  out-of-tree.  Grant Erickson <gerickson at nuovations.com>.

2008-09-25 Mark Grondona <mgrondona@llnl.gov>

	* src/etc/labels.db :
	  Add DIMM labels for ASUSTeK Computer INC. M3A32-MVP DELUXE.

2008-09-22 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.15.

	* edac-utils.spec :
	  Create labels.d directory under /etc/edac as part of RPM.

2008-09-19 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl.8.in :
	  Document /etc/edac/labels.d/ directory.

	* src/util/edac-ctl.in :
	  Allow multiple labeldb files to appear under /etc/edac/labels.d/*.
	  This is in addition to the existing labels.db file, and 
	  should allow sites to more easily add DIMM labels to edac
	  by just dropping a file int /etc/edac/labels.d/.

	* src/util/edac-ctl.in : 
	  Try to obtain DMI values from sysfs (/sys/class/dmi/id/board*)
	  first and fall back to dmidecode if this method fails.

	* src/util/edac-ctl.in :
	  When processing dmidecode output, don't include
	  the "System Information" stanza, which has been seen
	  to include bogus data. The MB vendor and model is in
	  the "Base Board Information" stanza.

2008-08-08 Mark Grondona <mgrondona@llnl.gov>

	* src/lib/libedac.c (edac_error_totals) : 
	  Don't memset tot before it is checked for NULL.

2008-05-30 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.14.

	* src/util/edac-ctl.1.in :
	  Clean up some language and fix typos.

	* src/etc/labels.db : 
	  Add labels for Supermicro H8DA3-2.

	* src/lib/libedac.c : 
	  Remove any newlines in EDAC DIMM labels names.

2008-02-26 Mark Grondona <mgrondona@llnl.gov>

	* : tag v0.13.

	* configure, src/etc/Makefile.am :
	  Re-run ./bootstrap.

	* src/util/edac-ctl.in : 
	  Improve quietness with --quiet option.
